--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
         <div class="filete aparicionfilete"></div>
         <div class="doscolumnas contacto">
             <div class="lista">
-<div class="listado"><a target="_blank" href="mailto:basantades@gmail.com"><div id="iconoEmail" class="iconoscontacto"></div><p>basantades@gmail.com</p></a></div>
-<div class="listado"><a target="_blank" href="https://api.whatsapp.com/send?phone=34630991055"><div id="iconoWhatsapp" class="iconoscontacto"></div><p>630991055</p></a></div>
-<div class="listado"><a target="_blank" href="https://www.linkedin.com/in/albertobasanta/"><div id="iconoLinkedin" class="iconoscontacto"></div><p>/albertobasanta</p></a></div> 
-<div class="listado"><a target="_blank" href="https://github.com/basantades"><div id="iconoGithub" class="iconoscontacto"></div><p>/basantades</p></a></div>
-<div class="listado"><a target="_blank" href="https://codepen.io/basantades"><div id="iconoCodepen" class="iconoscontacto"></div><p>/basantades</p></a></div>
+<div class="listado"><a target="_blank" href="mailto:basantades@gmail.com"><div id="iconoEmail" class="iconoscontacto"></div><p>basantades@gmail.com</p><div id="iconoFlechaLink" class="iconoscontacto animacionFlechaLink"></div></a></div>
+<div class="listado"><a target="_blank" href="https://api.whatsapp.com/send?phone=34630991055"><div id="iconoWhatsapp" class="iconoscontacto"></div><p>630991055</p><div id="iconoFlechaLink" class="iconoscontacto animacionFlechaLink"></div></a></div>
+<div class="listado"><a target="_blank" href="https://www.linkedin.com/in/albertobasanta/"><div id="iconoLinkedin" class="iconoscontacto"></div><p>/albertobasanta</p><div id="iconoFlechaLink" class="iconoscontacto animacionFlechaLink"></div></a></div> 
+<div class="listado"><a target="_blank" href="https://github.com/basantades"><div id="iconoGithub" class="iconoscontacto"></div><p>/basantades</p><div id="iconoFlechaLink" class="iconoscontacto animacionFlechaLink"></div></a></div>
+<div class="listado"><a target="_blank" href="https://codepen.io/basantades"><div id="iconoCodepen" class="iconoscontacto"></div><p>/basantades</p><div id="iconoFlechaLink" class="iconoscontacto animacionFlechaLink"></div></a></div>
 </div>
 <div class="flexcentrado">
     <div class="marco"><h5>frase final ponte en contacto</h5></div>
