--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <div id="hero">
         <div class="textHero">
             <div></div>
-            <h1 class="animate-fade">FRONT<br class="soloTablet">—END <br>DEVELO<br class="soloMovil">PER</h1>
+            <h1 class="aparicionInferior"><span class="front">FRONT</span><br class="soloTablet"><span class="end"><span class="guion">—</span>END </span><br><span class="developer">DEVELO<br class="soloMovil">PER</span></h1>
+            <div><h3 class="subtitulo aparicionInferior2">texto que me ha dicho Josep que ponga</h3></div>
             <a href="#destacados"><div class="flechaDown"></div></a>
         </div>
         <div class="bolaMov1"></div>
@@ -110,6 +111,11 @@
 <div class="listado"><a target="_blank" href="https://www.linkedin.com/in/albertobasanta/"><div id="iconoLinkedin" class="iconoscontacto"></div><p>/albertobasanta</p><div id="iconoFlechaLink" class="iconoscontacto animacionFlechaLink"></div></a></div> 
 <div class="listado"><a target="_blank" href="https://github.com/basantades"><div id="iconoGithub" class="iconoscontacto"></div><p>/basantades</p><div id="iconoFlechaLink" class="iconoscontacto animacionFlechaLink"></div></a></div>
 <div class="listado"><a target="_blank" href="https://codepen.io/basantades"><div id="iconoCodepen" class="iconoscontacto"></div><p>/basantades</p><div id="iconoFlechaLink" class="iconoscontacto animacionFlechaLink"></div></a></div>
+</div>
+<div class="iconosMovil">
+<div><a target="_blank" href="mailto:basantades@gmail.com"><div id="iconoEmail" class="iconoscontacto"></div></a></div>
+<div><a target="_blank" href="https://api.whatsapp.com/send?phone=34630991055"><div id="iconoWhatsapp" class="iconoscontacto"></div></a></div>
+<div><a target="_blank" href="https://www.linkedin.com/in/albertobasanta/"><div id="iconoLinkedin" class="iconoscontacto"></div></a></div> 
 </div>
 <div class="flexcentrado">
     <div class="marco"><h5>frase final ponte en contacto</h5></div>
