--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     <div id="hero">
         <div class="textHero">
             <div></div>
-            <h1 class="aparicionInferior"><span class="front">FRONT</span><br class="soloTablet"><span class="end"><span class="guion">—</span>END </span><br><span class="developer">DEVELO<br class="soloMovil">PER</span></h1>
-            <div><h3 class="subtitulo aparicionInferior2">texto que me ha dicho Josep que ponga</h3></div>
-            <a href="#destacados"><div class="flechaDown"></div></a>
+            <h1 class="aparicionTexto"><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer aparicionTexto2">DEVELO<br class="soloMovil">PER</span></h1>
+            <div><h4 class="subtitulo aparicionInferior2">Con un buen CSS <br class="soloMovil">todo se ve mejor</h4></div>
+            <!-- <div><h4 class="subtitulo aparicionInferior2">Receta de hoy: mezcla creatividad con diseño, hornea el CSS y un toque de JavaScript.</h4></div> -->
+            <a href="#portfolio"><div class="flechaDown"></div></a>
         </div>
         <div class="bolaMov1"></div>
         <div class="bolaMov2"></div>
@@ -38,9 +39,6 @@
         <div class="bolaMov4"></div>
         <div class="bolaMov5"></div>
     </div>
-    <section id="destacados">
-        <h2>Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h2>
-    </section>
     <section id="portfolio">
         <div class="titular animacionFade"><h2>Portfolio</h2></div>
         <div class="filete aparicionfilete"></div>
@@ -101,6 +99,9 @@
             </div>
         </div>
     </section>
+    <section id="destacados">
+        <h2>Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h2>
+    </section>
     <section id="contacto">
         <div class="titular animacionFade"><h2>Contacto</h2></div>
         <div class="filete aparicionfilete"></div>
@@ -118,7 +119,7 @@
 <div><a target="_blank" href="https://www.linkedin.com/in/albertobasanta/"><div id="iconoLinkedin" class="iconoscontacto"></div></a></div> 
 </div>
 <div class="flexcentrado">
-    <div class="marco"><h5>frase final ponte en contacto</h5></div>
+    <div class="marco"><a target="_blank" href="mailto:basantades@gmail.com"><h5 class="fraseFinal">¿Tienes un proyecto en mente?<br> ¡Estoy a <span class="clic">solo un clic</span> de distancia, <br>no dudes en escribirme!</h5></a></div>
 </div>
 </div>
     </section>
