--- a/index.html
+++ b/index.html
@@ -26,28 +26,24 @@
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
     <div id="hero">
-        <div class="textHero">
-            <div></div>
-            <h1 class="aparicionTexto"><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer aparicionTexto2">DEVELO<br class="soloMovil">PER</span></h1>
-            <div><h4 class="subtitulo aparicionInferior2">Con un buen CSS <br class="soloMovil">todo se ve mejor</h4></div>
-            <!-- <div><h4 class="subtitulo aparicionInferior2">Receta de hoy: mezcla creatividad con diseño, hornea el CSS y un toque de JavaScript.</h4></div> -->
-            <a href="#portfolio"><div class="flechaDown"></div></a>
-        </div>
+        <div class="textHero"><div></div><h1 class="aparicionTexto"><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer aparicionTexto2">DEVELO<br class="soloMovil">PER</span></h1><div><h4 class="subtitulo aparicionInferior2">Con un buen código <br class="soloMovil">todo se ve mejor</h4></div></div>
+        <a href="#portfolio"><div class="flechaDown"></div></a>
         <div class="bolaMov1"></div>
         <div class="bolaMov2"></div>
         <div class="bolaMov3"></div>
         <div class="bolaMov4"></div>
         <div class="bolaMov5"></div>
     </div>
+ 
     <section id="portfolio">
         <div class="titular animacionFade"><h2>Portfolio</h2></div>
         <div class="filete aparicionfilete"></div>
         <article>
-            <div class="carrusel">
+    <div class="carrusel">
         <div class="interiorCarrusel">
             <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
         </div>
-    </div>
+        </div>
         <div class="textoPortfolio">
         <h4>Mini juego Pokémon</h4>
         <h5 class="destacado"> Desarrollo web | JavaScript | CSS | HTML | Diseño gráfico</h5>
