--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
     <link id="rootcss" rel="stylesheet" href='css/root.css'>
-
 </head>
 <body>
 <div id="wrapper">
@@ -34,7 +33,6 @@
         <div class="bolaMov4"></div>
         <div class="bolaMov5"></div>
     </div>
- 
     <section id="portfolio">
         <div class="titular animacionFade"><h2>Portfolio</h2></div>
         <div class="filete aparicionfilete"></div>
@@ -52,7 +50,7 @@
             <a target="_blank" href="https://minijuego-poke.netlify.app/" class="boton"><p>Ver sitio</p><div id="iconoLink" class="iconosportfolio"></div></a>
             <a target="_blank" href="https://github.com/basantades/mini-juego-pokemon" class="boton"><p>Ver repositorio GitHub</p><div id="iconoGithub" class="iconosportfolio"></div></a>
             <a target="_blank" href="https://drive.google.com/file/d/1IS0r5HMhCB9aUiFxcHzaVnw3pRPC5V4a/view?usp=sharing" class="boton"><p>Presentación de proyecto</p><div id="iconoPdf" class="iconosportfolio"></div></a>
-    </div>        </div>
+    </div></div>
         </article>
         <article>
             <div class="carrusel">
@@ -87,8 +85,8 @@
             <div>
                 <h3 class="textoDegradado">Alberto Basanta Debasa</h3>
                 <h5 class="destacado">Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h5>
-                <p>Profesional del diseño en artes gráficas, iniciado en trabajos de impresión y editorial y evolucionado a online y web. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
-                <p>Actualmente me estoy centrando más en el desarrollo web y estoy ampliando mis conocimientos en CSS, UI/UX, JavaScript y PHP.</p>
+                <p>Profesional del <strong>diseño gráfico</strong>, iniciado en trabajos de impresión y editorial y evolucionado a <strong>diseño online y web</strong>. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
+                <p>Después de crear muchas webs en <strong>WordPress</strong> me estoy centrando más en el <strong>desarrollo web</strong> y ampliando más mis conocimientos en <strong>HTML, CSS, UI/UX, JavaScript y PHP</strong>.</p>
                 <div class="botones">
                     <a target="_blank" href="https://drive.google.com/file/d/19h_76yJXkYsbDNo9laZYt0wX1qgJQ57j/view?usp=sharing" class="boton"><p>Ver mi CV</p><div id="iconoPdf" class="iconosportfolio"></div></a>
                 </div>
