--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="iconoColor" class="icono-svg"></div>
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
-    <div id="hero">
+    <div id="hero" class="desaparicionsuperior">
         <div class="textHero"><div></div><h1 class="aparicionTexto"><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer aparicionTexto2">DEVELO<br class="soloMovil">PER</span></h1><div><h4 class="subtitulo aparicionInferior2">Con un buen código <br class="soloMovil">todo se ve mejor</h4></div></div>
         <a href="#portfolio"><div class="flechaDown"></div></a>
         <div class="bolaMov1"></div>
@@ -37,33 +37,33 @@
         <div class="titular animacionFade"><h2>Portfolio</h2></div>
         <div class="filete aparicionfilete"></div>
         <article>
-    <div class="carrusel">
+    <div class="carrusel animacionFade">
         <div class="interiorCarrusel">
             <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
         </div>
         </div>
-        <div class="textoPortfolio">
+        <div class="textoPortfolio img-aparicion">
         <h4>Mini juego Pokémon</h4>
         <h5 class="destacado"> Desarrollo web | JavaScript | CSS | HTML | Diseño gráfico</h5>
         <p>Este proyecto presenta un juego interactivo desarrollado en HTML, CSS y JavaScript vanilla, inspirado en el universo Pokémon. Eleva el clásico juego de “Piedra, papel o tijera” a una experiencia más compleja incorporando cinco elementos distintos en lugar de tres.</p>
         <div class="botones">
-            <a target="_blank" href="https://minijuego-poke.netlify.app/" class="boton"><p>Ver sitio</p><div id="iconoLink" class="iconosportfolio"></div></a>
-            <a target="_blank" href="https://github.com/basantades/mini-juego-pokemon" class="boton"><p>Ver repositorio GitHub</p><div id="iconoGithub" class="iconosportfolio"></div></a>
-            <a target="_blank" href="https://drive.google.com/file/d/1IS0r5HMhCB9aUiFxcHzaVnw3pRPC5V4a/view?usp=sharing" class="boton"><p>Presentación de proyecto</p><div id="iconoPdf" class="iconosportfolio"></div></a>
+            <a target="_blank" href="https://minijuego-poke.netlify.app/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
+            <a target="_blank" href="https://github.com/basantades/mini-juego-pokemon" class="boton"><p>Repositorio GitHub</p><div class="iconoGithub iconosportfolio"></div></a>
+            <a target="_blank" href="https://drive.google.com/file/d/1IS0r5HMhCB9aUiFxcHzaVnw3pRPC5V4a/view?usp=sharing" class="boton"><p>Presentación</p><div class="iconoPdf iconosportfolio"></div></a>
     </div></div>
         </article>
         <article>
-            <div class="carrusel">
+            <div class="carrusel animacionFade">
         <div class="interiorCarrusel">
             <img src="images/fabtextil.webp" alt="web fabtextil en WordPress">
         </div>
     </div>
-        <div class="textoPortfolio">
+        <div class="textoPortfolio img-aparicion">
         <h4>Web FAB TEXTIL</h4>
         <h5 class="destacado"> Desarrollo web | WordPress | Diseño gráfico | SEO </h5>
         <p>Realización de la pagina web corporativa para la empresa textil FAB TEXTIL. El diseño se ha enfocado en crear una estética moderna que combine con la identidad familiar y cercana de la marca. Desarrollada utilizando WordPress y optimizando su SEO.</p>
         <div class="botones">
-            <a target="_blank" href="https://www.fabtextil.com/" class="boton"><p>Ver sitio</p><div id="iconoLink" class="iconosportfolio"></div></a>
+            <a target="_blank" href="https://www.fabtextil.com/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
     </div>
         </div>
         </article>
@@ -82,37 +82,71 @@
                     <div class="marcoFoto"></div>
                 </div>
             </div>
-            <div>
-                <h3 class="textoDegradado">Alberto Basanta Debasa</h3>
+            <div class="animacionFade">
+                <h3 class="textoDegradado ">Alberto Basanta Debasa</h3>
                 <h5 class="destacado">Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h5>
                 <p>Profesional del <strong>diseño gráfico</strong>, iniciado en trabajos de impresión y editorial y evolucionado a <strong>diseño online y web</strong>. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
-                <p>Después de crear muchas webs en <strong>WordPress</strong> me estoy centrando más en el <strong>desarrollo web</strong> y ampliando más mis conocimientos en <strong>HTML, CSS, UI/UX, JavaScript y PHP</strong>.</p>
+                <p>Después de crear bastantes webs en <strong>WordPress</strong> me estoy centrando más en el <strong>desarrollo web</strong> y ampliando más mis conocimientos en <strong>HTML, CSS, UI/UX, JavaScript y PHP</strong>.</p>
                 <div class="botones">
-                    <a target="_blank" href="https://drive.google.com/file/d/19h_76yJXkYsbDNo9laZYt0wX1qgJQ57j/view?usp=sharing" class="boton"><p>Ver mi CV</p><div id="iconoPdf" class="iconosportfolio"></div></a>
+                    <a target="_blank" href="https://drive.google.com/file/d/19h_76yJXkYsbDNo9laZYt0wX1qgJQ57j/view?usp=sharing" class="boton img-aparicion"><p>CV completo</p><div class="iconoPdf iconosportfolio"></div></a>
                 </div>
             </div>
         </div>
     </section>
-    <section id="destacados">
-        <h2>Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h2>
+    <section id="habilidades" class="animacionFade">
+        <h3>Habilidades</h3>
+        <div class="listahabilidades elementos-aparicion">
+        <div class="card">
+            <div class="ampliacion3"><div class="iconoAdobe iconoshabilidades"></div></div>
+            <p>Suite Adobe</p>
+        </div>
+        <div class="card">
+            <div class="ampliacion3"><div class="iconoAdobe iconoshabilidades"></div></div>
+            <p>Suite Adobe</p>
+        </div>
+        <div class="card">
+            <div class="ampliacion3"><div class="iconoAdobe iconoshabilidades"></div></div>
+            <p>Suite Adobe</p>
+        </div>
+        <div class="card">
+            <div class="ampliacion3"><div class="iconoAdobe iconoshabilidades"></div></div>
+            <p>Suite Adobe</p>
+        </div>
+        <div class="card">
+            <div class="ampliacion3"><div class="iconoAdobe iconoshabilidades"></div></div>
+            <p>Suite Adobe</p>
+        </div>
+        <div class="card">
+            <div class="ampliacion3"><div class="iconoAdobe iconoshabilidades"></div></div>
+            <p>Suite Adobe</p>
+        </div>
+        <div class="card">
+            <div class="ampliacion3"><div class="iconoAdobe iconoshabilidades"></div></div>
+            <p>Suite Adobe</p>
+        </div>
+        <div class="card">
+            <div class="ampliacion3"><div class="iconoAdobe iconoshabilidades"></div></div>
+            <p>Suite Adobe</p>
+        </div>
+    </div>
     </section>
     <section id="contacto">
         <div class="titular animacionFade"><h2>Contacto</h2></div>
         <div class="filete aparicionfilete"></div>
         <div class="doscolumnas contacto">
             <div class="lista">
-<div class="listado"><a target="_blank" href="mailto:basantades@gmail.com"><div id="iconoEmail" class="iconoscontacto"></div><p>basantades@gmail.com</p><div id="iconoFlechaLink" class="iconoscontacto animacionFlechaLink"></div></a></div>
-<div class="listado"><a target="_blank" href="https://api.whatsapp.com/send?phone=34630991055"><div id="iconoWhatsapp" class="iconoscontacto"></div><p>630991055</p><div id="iconoFlechaLink" class="iconoscontacto animacionFlechaLink"></div></a></div>
-<div class="listado"><a target="_blank" href="https://www.linkedin.com/in/albertobasanta/"><div id="iconoLinkedin" class="iconoscontacto"></div><p>/albertobasanta</p><div id="iconoFlechaLink" class="iconoscontacto animacionFlechaLink"></div></a></div> 
-<div class="listado"><a target="_blank" href="https://github.com/basantades"><div id="iconoGithub" class="iconoscontacto"></div><p>/basantades</p><div id="iconoFlechaLink" class="iconoscontacto animacionFlechaLink"></div></a></div>
-<div class="listado"><a target="_blank" href="https://codepen.io/basantades"><div id="iconoCodepen" class="iconoscontacto"></div><p>/basantades</p><div id="iconoFlechaLink" class="iconoscontacto animacionFlechaLink"></div></a></div>
+<div class="listado elementos-aparicion"><a target="_blank" href="mailto:basantades@gmail.com"><div class="iconoEmail iconoscontacto"></div><p>basantades@gmail.com</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div>
+<div class="listado elementos-aparicion"><a target="_blank" href="https://api.whatsapp.com/send?phone=34630991055"><div class="iconoWhatsapp iconoscontacto"></div><p>630991055</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div>
+<div class="listado elementos-aparicion"><a target="_blank" href="https://www.linkedin.com/in/albertobasanta/"><div class="iconoLinkedin iconoscontacto"></div><p>/albertobasanta</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div> 
+<div class="listado elementos-aparicion"><a target="_blank" href="https://github.com/basantades"><div class="iconoGithub iconoscontacto"></div><p>/basantades</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div>
+<div class="listado elementos-aparicion"><a target="_blank" href="https://codepen.io/basantades"><div class="iconoCodepen iconoscontacto"></div><p>/basantades</p><div class="iconoFlechaLink iconos animacionFlechaLink"></div></a></div>
 </div>
-<div class="iconosMovil">
-<div><a target="_blank" href="mailto:basantades@gmail.com"><div id="iconoEmail" class="iconoscontacto"></div></a></div>
-<div><a target="_blank" href="https://api.whatsapp.com/send?phone=34630991055"><div id="iconoWhatsapp" class="iconoscontacto"></div></a></div>
-<div><a target="_blank" href="https://www.linkedin.com/in/albertobasanta/"><div id="iconoLinkedin" class="iconoscontacto"></div></a></div> 
+<div class="iconosMovil img-aparicion">
+<div><a target="_blank" href="mailto:basantades@gmail.com"><div class="iconoEmail iconos"></div></a></div>
+<div><a target="_blank" href="https://api.whatsapp.com/send?phone=34630991055"><div class="iconoWhatsapp iconos"></div></a></div>
+<div><a target="_blank" href="https://www.linkedin.com/in/albertobasanta/"><div class="iconoLinkedin iconos"></div></a></div> 
 </div>
-<div class="flexcentrado">
+<div class="flexcentrado animacionFade">
     <div class="marco"><a target="_blank" href="mailto:basantades@gmail.com"><h5 class="fraseFinal">¿Tienes un proyecto en mente?<br> ¡Estoy a <span class="clic">solo un clic</span> de distancia, <br>no dudes en escribirme!</h5></a></div>
 </div>
 </div>
@@ -120,7 +154,7 @@
     <footer>
         <p>© 2024 Alberto Basanta.</p>
         <div class="flex"><p>Ya has llegado al final, </p>
-            <a  class="flex" href="#wrapper"><p><span class="bold">vuelve al inicio</span><div id="iconoUp" class="iconoscontacto"></div></p></a>
+            <a  class="flex" href="#wrapper"><p><span class="bold">vuelve al inicio</span><div class="iconoUp iconos"></div></p></a>
         </div>
     </footer>
 </div>
