--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
     <header>
         <div id="iconoMenuClose" class="iconos animate-fade soloMovil ocultar"></div> 
         <div id="iconoMenu" class="iconos soloMovil animate-fade "></div>
-        <h4 id="nombre" class="textoDegradado black">Alberto <span class="normal">{</span>Basanta<span class="normal">}</span></h4>
+        <h4 class="textoDegradado black nombreGrande">Alberto <span class="normal">{</span>Basanta<span class="normal">}</span></h4>
+        <h4 class="textoDegradado black nombreMediano"><span class="normal">{</span>Basanta<span class="normal">}</span></h4>
+        <h4 class="textoDegradado black nombrePequeno"><span class="normal">{</span>B<span class="normal">}</span></h4>
         <nav>
-            <div class="menu animacionFadeUp"><a href="#portfolio">Portfolio</a></div>
-            <div class="menu animacionFadeUp2"><a href="#sobremi">Sobre mi</a></div>
-            <div class="menu animacionFadeUp3"><a href="#contacto">Contacto</a></div>
+            <div class="menu animacionfadeDown"><a href="#portfolio">Portfolio</a></div>
+            <div class="menu animacionfadeDown2"><a href="#sobremi">Sobre mi</a></div>
+            <div class="menu animacionfadeDown3"><a href="#contacto">Contacto</a></div>
         </nav> 
     </header>
-    <div id="desplegableMenu" class="ocultar soloMovil">
-        <div class="menu animacionFadeUp"><a href="#portfolio">Portfolio</a></div>
-        <div class="menu animacionFadeUp2"><a href="#sobremi">Sobre mi</a></div>
-        <div class="menu animacionFadeUp3"><a href="#contacto">Contacto</a></div>
+    <div id="desplegableMenu" class="desplegableMenu ocultar">
+        <div class="menu animacionfadeDown"><a href="#portfolio">Portfolio</a></div>
+        <div class="menu animacionfadeDown2"><a href="#sobremi">Sobre mi</a></div>
+        <div class="menu animacionfadeDown3"><a href="#contacto">Contacto</a></div>
     </div> 
     <div id="selectorColores">
         <div id="iconoLight" class="icono-svg"></div>
@@ -32,7 +34,7 @@
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
     <div id="hero" class="desaparicionsuperior">
-        <div class="textHero"><div></div><h1 class="aparicionTexto"><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer aparicionTexto2">DEVELO<br class="soloMovil">PER</span></h1><div><h4 class="subtitulo aparicionInferior2">Con un buen código <br class="soloMovil">todo se ve mejor</h4></div></div>
+        <div class="textHero"><div></div><h1 class="aparicionTexto"><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer aparicionTexto2">DEVELO<br class="soloMovil">PER</span></h1><div><h4 class="subtitulo aparicionInferior2">Con un buen código todo se ve mejor</h4></div></div>
         <a href="#portfolio"><div class="flechaDown"></div></a>
         <div class="bolaMov1"></div>
         <div class="bolaMov2"></div>
