--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <body>
 <div id="wrapper">
     <header>
-        <div id="iconoMenuClose" class="iconos animate-fade soloMovil ocultar"></div> 
-        <div id="iconoMenu" class="iconos soloMovil animate-fade "></div>
-        <h4 class="textoDegradado black nombreGrande">Alberto <span class="normal">{</span>Basanta<span class="normal">}</span></h4>
-        <h4 class="textoDegradado black nombreMediano"><span class="normal">{</span>Basanta<span class="normal">}</span></h4>
-        <h4 class="textoDegradado black nombrePequeno"><span class="normal">{</span>B<span class="normal">}</span></h4>
+        <div id="iconoMenuClose" class="iconos animate-fadezoom soloMovil ocultar"></div> 
+        <div id="iconoMenu" class="iconos soloMovil animate-fadezoom "></div>
+        <div class="textoDegradado black">
+        <h4 class="nombreGrande">Alberto <span class="normal">{</span>Basanta<span class="normal">}</span></h4>
+        <h4 class="nombreMediano"><span class="normal">{</span>Basanta<span class="normal">}</span></h4>
+        <h4 class="nombrePequeno"><span class="normal">{</span>B<span class="normal">}</span></h4>
+        </div>
         <nav>
             <div class="menu animacionfadeDown"><a href="#portfolio">Portfolio</a></div>
             <div class="menu animacionfadeDown2"><a href="#sobremi">Sobre mi</a></div>
