--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
 <div id="wrapper">
     <header>
-        <div id="iconoMenuClose" class="iconos animate-fadezoom soloMovil ocultar"></div> 
-        <div id="iconoMenu" class="iconos soloMovil animate-fadezoom "></div>
+        <div class="iconoMenu">
+            <div id="iconoMenuClose" class="iconos animate-fadezoom soloMovil ocultar"></div> 
+            <div id="iconoMenu" class="iconos soloMovil animate-fadezoom "></div>
+        </div>
         <div class="textoDegradado black">
-        <h4 class="nombreGrande">Alberto <span class="normal">{</span>Basanta<span class="normal">}</span></h4>
-        <h4 class="nombreMediano"><span class="normal">{</span>Basanta<span class="normal">}</span></h4>
+        <h4 class="nombreGrande"><span class="normal">{</span>Basanta<span class="normal">}</span></h4>
         <h4 class="nombrePequeno"><span class="normal">{</span>B<span class="normal">}</span></h4>
         </div>
         <nav>
@@ -36,8 +37,8 @@
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
     <div id="hero" class="desaparicionsuperior">
-        <div class="textHero"><div></div><h1 class="aparicionTexto"><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer aparicionTexto2">DEVELO<br class="soloMovil">PER</span></h1><div><h4 class="subtitulo aparicionInferior2">Con un buen código todo se ve mejor</h4></div></div>
-        <a href="#portfolio"><div class="flechaDown"></div></a>
+        <div class="textHero"><div></div><h1 class="aparicionTexto"><span class="saludo"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer aparicionTexto2">DEVELO<br class="soloMovil">PER</span></h1><div><h5 class="subtitulo aparicionInferior2">Con un buen código todo se ve mejor</h5></div></div>
+        <div class="flecha"><a href="#portfolio"><div class="flechaDown"></div></a></div>
         <div class="bolaMov1"></div>
         <div class="bolaMov2"></div>
         <div class="bolaMov3"></div>
