--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
 <div id="wrapper">
     <header>
-        <div class="iconoMenu">
+        <div class="iconoMenu aparicionIzquierda">
             <div id="iconoMenuClose" class="iconos animate-fadezoom soloMovil ocultar"></div> 
             <div id="iconoMenu" class="iconos soloMovil animate-fadezoom "></div>
         </div>
         <div class="textoDegradado black">
-        <h4 class="nombreGrande"><span class="normal">{</span>Basanta<span class="normal">}</span></h4>
-        <h4 class="nombrePequeno"><span class="normal">{</span>B<span class="normal">}</span></h4>
+            <a href="#"><h4 class="nombreGrande"><span class="normal">.</span>basanta<span class="normal">{des}</span></h4></a>
+            <a href="#"><h4 class="nombrePequeno"><span class="normal">.{</span>b<span class="normal">}</span></h4></a>
         </div>
         <nav>
             <div class="menu animacionfadeDown"><a href="#portfolio">Portfolio</a></div>
@@ -37,7 +37,7 @@
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
     <div id="hero" class="desaparicionsuperior">
-        <div class="textHero"><div></div><h1 class="aparicionTexto"><span class="saludo"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer aparicionTexto2">DEVELO<br class="soloMovil">PER</span></h1><div><h5 class="subtitulo aparicionInferior2">Con un buen código todo se ve mejor</h5></div></div>
+        <div class="textHero aparicionTexto"><div></div><h1><span class="saludo animate-fade aparicionIzquierdaExtra"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer aparicionTexto2">DEVELO<br class="soloMovil">PER</span></h1><div><h5 class="subtitulo aparicionInferior2">Con un buen código todo se ve mejor</h5></div></div>
         <div class="flecha"><a href="#portfolio"><div class="flechaDown"></div></a></div>
         <div class="bolaMov1"></div>
         <div class="bolaMov2"></div>
@@ -99,6 +99,7 @@
                 <h5 class="destacado">Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h5>
                 <p>Profesional del <strong>diseño gráfico</strong>, iniciado en trabajos de impresión y editorial y evolucionado a <strong>diseño online y web</strong>. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
                 <p>Después de crear bastantes webs en <strong>WordPress</strong> me estoy centrando más en el <strong>desarrollo web</strong> y ampliando más mis conocimientos en <strong>HTML, CSS, UI/UX, JavaScript y PHP</strong>.</p>
+                <p>Un ejemplo es esta web, la cual he desarrollado utilizando <strong>CSS</strong>  y <strong> JavaScript puro</strong> .</p>
                 <div class="botones">
                     <a target="_blank" href="https://drive.google.com/file/d/19h_76yJXkYsbDNo9laZYt0wX1qgJQ57j/view?usp=sharing" class="boton img-aparicion"><p>CV completo</p><div class="iconoPdf iconosportfolio"></div></a>
                 </div>
