--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <html lang="es" class="dark">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Web de Alberto Basanta, front end developer y diseñador gráfico en Barcelona. Portfolio y Curriculum Vitae.">
+    <meta name="author" content="Alberto Basanta">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Alberto Basanta</title>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://basantades.netlify.app">
+    <meta property="og:title" content="Alberto Basanta">
+    <meta property="og:description" content="Web de Alberto Basanta, front end developer y diseñador gráfico en Barcelona. Portfolio y Curriculum Vitae.">
+    <meta property="og:image" content="https://basantades.netlify.app/images/portfolio-basantades.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://basantades.netlify.app">
+    <meta property="twitter:title" content="Alberto Basanta">
+    <meta property="twitter:description" content="Web de Alberto Basanta, front end developer y diseñador gráfico en Barcelona. Portfolio y Curriculum Vitae.">
+    <meta property="twitter:image" content="https://basantades.netlify.app/images/portfolio-basantades.jpg">
+    <title>Alberto Basanta</title>
+    <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="preload" href="fonts/Roboto-Black.woff2" as="font">
+    <link rel="preload" href="fonts/Roboto-Bold.woff2" as="font">
+    <link rel="preload" href="fonts/Roboto-Regular.woff2" as="font">
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
-    <link id="rootcss" rel="stylesheet" href='css/root.css'>
-</head>
+    <link id="rootcss" rel="stylesheet" href='css/root.css'></head>
 <body>
 <div id="wrapper">
     <header>
@@ -37,7 +56,7 @@
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
     <div id="hero" class="desaparicionsuperior">
-        <div class="textHero aparicionTexto"><div></div><h1><span class="saludo animate-fade aparicionIzquierdaExtra"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer aparicionTexto2">DEVELO<br class="soloMovil">PER</span></h1><div><h5 class="subtitulo aparicionInferior2">Con un buen código todo se ve mejor</h5></div></div>
+        <div class="textHero"><h1 class="aparicionTexto"><span class="saludo aparicionTexto2"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer animate-fade aparicionIzquierdaExtra">DEVELO<br class="soloMovil">PER</span></h1><div><h5 class="subtitulo aparicionInferior2">Con un buen código todo se ve mejor</h5></div></div>
         <div class="flecha"><a href="#portfolio"><div class="flechaDown"></div></a></div>
         <div class="bolaMov1"></div>
         <div class="bolaMov2"></div>
@@ -49,12 +68,12 @@
         <div class="titular animacionFade"><h2>Portfolio</h2></div>
         <div class="filete aparicionfilete"></div>
         <article>
-    <div class="carrusel aparicionFadeUp">
+        <div class="carrusel aparicionFadeUp">
         <div class="interiorCarrusel">
             <img src="images/juego-pokemon.webp" alt="portfolio juego Pokemon">
         </div>
         </div>
-        <div class="textoPortfolio img-aparicion">
+        <div class="textoPortfolio aparicionTextoPortfolio">
         <h4>Mini juego Pokémon</h4>
         <h5 class="destacado"> Desarrollo web | JavaScript | CSS | HTML | Diseño gráfico</h5>
         <p>Este proyecto presenta un juego interactivo desarrollado en HTML, CSS y JavaScript vanilla, inspirado en el universo Pokémon. Eleva el clásico juego de “Piedra, papel o tijera” a una experiencia más compleja incorporando cinco elementos distintos en lugar de tres.</p>
@@ -62,15 +81,15 @@
             <a target="_blank" href="https://minijuego-poke.netlify.app/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
             <a target="_blank" href="https://github.com/basantades/mini-juego-pokemon" class="boton"><p>Repositorio GitHub</p><div class="iconoGithub iconosportfolio"></div></a>
             <a target="_blank" href="https://drive.google.com/file/d/1IS0r5HMhCB9aUiFxcHzaVnw3pRPC5V4a/view?usp=sharing" class="boton"><p>Presentación</p><div class="iconoPdf iconosportfolio"></div></a>
-    </div></div>
+        </div></div>
         </article>
         <article>
             <div class="carrusel aparicionFadeUp">
         <div class="interiorCarrusel">
-            <img src="images/fabtextil.webp" alt="web fabtextil en WordPress">
+            <img src="images/fabtextil.webp" alt="web Fabtextil en WordPress">
         </div>
     </div>
-        <div class="textoPortfolio img-aparicion">
+        <div class="textoPortfolio aparicionTextoPortfolio">
         <h4>Web FAB TEXTIL</h4>
         <h5 class="destacado"> Desarrollo web | WordPress | Diseño gráfico | SEO </h5>
         <p>Realización de la pagina web corporativa para la empresa textil FAB TEXTIL. El diseño se ha enfocado en crear una estética moderna que combine con la identidad familiar y cercana de la marca. Desarrollada utilizando WordPress y optimizando su SEO.</p>
@@ -79,7 +98,82 @@
     </div>
         </div>
         </article>
-        <h3 class="animate-movimiento-rebote">"Estos son mis diseños, si no le gustan, tengo otros"</h3>
+        <article>
+            <div class="carrusel aparicionFadeUp">
+            <div class="interiorCarrusel">
+                <img src="images/Big-Up.webp" alt="portfolio Proyecto Big Up">
+            </div>
+            </div>
+            <div class="textoPortfolio aparicionTextoPortfolio">
+            <h4>Proyecto aplicación Big Up</h4>
+            <h5 class="destacado"> UI UX | Diseño gráfico | Branding | Diseño web | Prototipado</h5>
+            <p>Ideación, Investigación, definición, creación, diseño y prototipado de Big Up. Big Up es una aplicación para que adultos mayores puedan acceder de manera fácil y rápida a la información sobre eventos, actividades y propuestas culturales que se realizan en Barcelona cerca de su ubicación.</p>
+            <div class="botones">
+                <a target="_blank" href="https://www.behance.net/gallery/185456831/Big-Up" class="boton"><p>Proyecto completo</p><div class="iconoBehance iconosportfolio"></div></a>
+                <a target="_blank" href="https://www.figma.com/proto/R4w0hkrkh52UXpMSSGAo13/Wireframes-y-prototipo-BigUp?type=design&node-id=350-1565&t=Y4SmqpSQUd2GHn5X-1&scaling=scale-down&page-id=194%3A610&starting-point-node-id=288%3A596&mode=design" class="boton"><p>Ver prototipo</p><div class="iconoFigma iconosportfolio"></div></a>
+            </div></div>
+            </article>
+            <article>
+                <div class="carrusel aparicionFadeUp">
+            <div class="interiorCarrusel">
+                <img src="images/Bruno_Vassari.webp" alt="web Bruno Vassari en WordPress">
+            </div>
+        </div>
+            <div class="textoPortfolio aparicionTextoPortfolio">
+            <h4>Web Bruno Vassari</h4>
+            <h5 class="destacado"> Desarrollo web | WordPress | Diseño gráfico | SEO </h5>
+            <p>Trabajando en la agencia Imago realicé diseño y desarrollo de la pagina web corporativa para la empresa Bruno Vassari. Desarrollada con WordPress, se usó plugin de woocommerce en modo catalogo para mostrar productos y se realizó la optimización de su SEO.</p>
+            <div class="botones">
+                <a target="_blank" href="https://brunovassari.com/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
+        </div>
+            </div>
+            </article>
+            <article>
+                <div class="carrusel aparicionFadeUp">
+            <div class="interiorCarrusel">
+                <img src="images/AEIC.webp" alt="web AEIC">
+            </div>
+        </div>
+            <div class="textoPortfolio aparicionTextoPortfolio">
+            <h4>Web de la Asociación Española de Ingredientes Cosméticos (AEIC)</h4>
+            <h5 class="destacado"> Desarrollo web | WordPress | SEO </h5>
+            <p>Trabajando en la agencia Imago realicé el desarrollo de la pagina web corporativa para la Asociación Española de Ingredientes Cosméticos (AEIC). Desarrollada utilizando WordPress y optimizando su SEO.</p>
+            <div class="botones">
+                <a target="_blank" href="https://aeic.eu/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
+        </div>
+            </div>
+            </article>
+        <article>
+            <div class="carrusel aparicionFadeUp">
+            <div class="interiorCarrusel">
+                <img src="images/concurso_PS5.webp" alt="portfolio concurso ficticio PS5">
+            </div>
+            </div>
+            <div class="textoPortfolio aparicionTextoPortfolio">
+            <h4>Concurso ficticio PS5</h4>
+            <h5 class="destacado"> Desarrollo web | CSS | Tailwind CSS | HTML | Diseño gráfico</h5>
+            <p>Landing de concurso ficticio de PlayStation 5. Desarrollado en HTML y CSS. Proyexcto para practicar el uso de CSS sobretodo con Tailwind CSS y animaciones con libreria AOS</p>
+            <div class="botones">
+                <a target="_blank" href="https://landing-ps5.netlify.app/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
+                <a target="_blank" href="https://github.com/basantades/Concurso-PS5" class="boton"><p>Repositorio GitHub</p><div class="iconoGithub iconosportfolio"></div></a>
+                <a target="_blank" href="https://drive.google.com/file/d/1h01gUcDD1MittqYjVbSYms8Rcfu4dhHj/view?usp=sharing" class="boton"><p>Presentación</p><div class="iconoPdf iconosportfolio"></div></a>
+            </div></div> 
+            </article>
+            <article>
+                <div class="carrusel aparicionFadeUp">
+            <div class="interiorCarrusel">
+                <img src="images/Kids_innovation_fest.webp" alt="web KID'S INNOVATION FEST 2022">
+            </div>
+        </div>
+            <div class="textoPortfolio aparicionTextoPortfolio">
+            <h4>Web KID'S INNOVATION FEST 2022</h4>
+            <h5 class="destacado"> Desarrollo web | WordPress | SEO </h5>
+            <p>Trabajando en la agencia Imago realicé el desarrollo de la pagina web para el evento KID'S INNOVATION FEST del año 2022 que se realizó en Lloret de Mar. Desarrollada utilizando WordPress y optimizando su SEO.</p>
+            <div class="botones">
+        </div>
+            </div>
+            </article>
+        <!-- <h5 class="frase animate-movimiento-rebote">"Estos son mis diseños, si no le gustan, tengo otros"</h5> -->
     </section>
     <section id="sobremi">
         <div class="titular animacionFade"><h2>Sobre mi</h2></div>
@@ -87,19 +181,19 @@
         <div class="doscolumnas">
             <div class="flexcentrado cuadrado">
                 <div class="foto1plano flexcentrado">
-                    <img class="imgAlberto img-aparicion" src="images/alberto-basanta.webp" alt="Alberto Basanta Debasa">
+                    <img class="imgAlberto img-aparicion" src="images/alberto-basanta.webp" alt="Front-enddevloper Alberto Basanta Debasa">
                 </div>
                 <div class="enmarcarFoto animacion-marcos cuadrado">
                     <div class="marcoFoto"></div>
                     <div class="marcoFoto"></div>
                 </div>
             </div>
-            <div class="animacionFade">
+            <div class="aparicionTextoPortfolio">
                 <h3 class="textoDegradado ">Alberto Basanta Debasa</h3>
                 <h5 class="destacado">Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h5>
                 <p>Profesional del <strong>diseño gráfico</strong>, iniciado en trabajos de impresión y editorial y evolucionado a <strong>diseño online y web</strong>. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
                 <p>Después de crear bastantes webs en <strong>WordPress</strong> me estoy centrando más en el <strong>desarrollo web</strong> y ampliando más mis conocimientos en <strong>HTML, CSS, UI/UX, JavaScript y PHP</strong>.</p>
-                <p>Un ejemplo es esta web, la cual he desarrollado utilizando <strong>CSS</strong>  y <strong> JavaScript puro</strong> .</p>
+                <p>Un ejemplo es esta web, la cual he desarrollado utilizando <strong>CSS</strong>  y <strong> JavaScript puro</strong>.</p>
                 <div class="botones">
                     <a target="_blank" href="https://drive.google.com/file/d/19h_76yJXkYsbDNo9laZYt0wX1qgJQ57j/view?usp=sharing" class="boton img-aparicion"><p>CV completo</p><div class="iconoPdf iconosportfolio"></div></a>
                 </div>
