--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
     <link id="rootcss" rel="stylesheet" href='css/root.css'></head>
+    <link rel="stylesheet" href="css/iconos.css">
+    <link rel="stylesheet" href="css/animaciones.css">
+    <link rel="stylesheet" href="css/fonts-size-root.css">
+
 <body>
 <div id="wrapper">
     <header>
@@ -55,8 +59,8 @@
         <div id="iconoColor" class="icono-svg"></div>
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
-    <div id="hero" class="desaparicionsuperior">
-        <div class="textHero"><h1 class="aparicionTexto"><span class="saludo aparicionTexto2"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer animate-fade aparicionIzquierdaExtra">DEVELO<br class="soloMovil">PER</span></h1><div><h5 class="subtitulo aparicionInferior2">Con un buen código todo se ve mejor</h5></div></div>
+    <div id="hero">
+        <div class="textHero"><h1 class="aparicionTexto"><span class="saludo aparicionTexto2"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="front">FRONT</span><br class="soloTablet"><span class="end "><span class="guion">—</span>END </span><br><span class="developer animate-fade aparicionIzquierdaExtra">DEVELOPER</span></h1><div><h5 class="subtitulo aparicionInferior2">Con un buen código <br class="soloMovil">todo se ve mejor</h5></div></div>
         <div class="flecha"><a href="#portfolio"><div class="flechaDown"></div></a></div>
         <div class="bolaMov1"></div>
         <div class="bolaMov2"></div>
@@ -282,7 +286,10 @@
     <footer>
         <p>© 2024 Alberto Basanta.</p>
         <div class="flex"><p>Ya has llegado al final, </p>
-            <a  class="flex" href="#"><p><span class="bold">vuelve al inicio</span><div class="iconoUp iconos"></div></p></a>
+        <div class="flex">
+            <a href="#"><p><span class="bold">vuelve al inicio</span></p></a>
+            <a href="#"><div class="iconoUp iconos"></div></a>
+        </div>
         </div>
     </footer>
 </div>
