--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <link rel="preload" href="fonts/Roboto-Regular.woff2" as="font">
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
-    <link id="rootcss" rel="stylesheet" href='css/root.css'></head>
+    <link id="rootcss" rel="stylesheet" href='css/root.css'>
     <link rel="stylesheet" href="css/iconos.css">
     <link rel="stylesheet" href="css/animaciones.css">
     <link rel="stylesheet" href="css/fonts-size-root.css">
-
+</head>
 <body>
 <div id="wrapper">
     <header>
