--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
     <section id="portfolio">
         <div class="titular animacionFade"><h2>Portfolio</h2></div>
         <div class="filete aparicionfilete"></div>
+        
+        <article>
+            <div class="carrusel aparicionFadeUp">
+        <div class="interiorCarrusel">
+            <img src="images/fabtextil.webp" alt="web Fabtextil en WordPress">
+        </div>
+    </div>
+        <div class="textoPortfolio aparicionTextoPortfolio">
+        <h4>Web FAB TEXTIL</h4>
+        <h5 class="destacado"> Desarrollo web | WordPress | Diseño gráfico | SEO </h5>
+        <p>Realización de la pagina web corporativa para la empresa textil FAB TEXTIL. El diseño se ha enfocado en crear una estética moderna que combine con la identidad familiar y cercana de la marca. Desarrollada utilizando WordPress y optimizando su SEO.</p>
+        <div class="botones">
+            <a target="_blank" href="https://www.fabtextil.com/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
+    </div>
+        </div>
+        </article>
         <article>
         <div class="carrusel aparicionFadeUp">
         <div class="interiorCarrusel">
@@ -90,15 +106,15 @@
         <article>
             <div class="carrusel aparicionFadeUp">
         <div class="interiorCarrusel">
-            <img src="images/fabtextil.webp" alt="web Fabtextil en WordPress">
+            <img src="images/Bruno_Vassari.webp" alt="web Bruno Vassari en WordPress">
         </div>
     </div>
         <div class="textoPortfolio aparicionTextoPortfolio">
-        <h4>Web FAB TEXTIL</h4>
+        <h4>Web Bruno Vassari</h4>
         <h5 class="destacado"> Desarrollo web | WordPress | Diseño gráfico | SEO </h5>
-        <p>Realización de la pagina web corporativa para la empresa textil FAB TEXTIL. El diseño se ha enfocado en crear una estética moderna que combine con la identidad familiar y cercana de la marca. Desarrollada utilizando WordPress y optimizando su SEO.</p>
+        <p>Trabajando en la agencia Imago realicé diseño y desarrollo de la pagina web corporativa para la empresa Bruno Vassari. Desarrollada con WordPress, se usó plugin de woocommerce en modo catalogo para mostrar productos y se realizó la optimización de su SEO.</p>
         <div class="botones">
-            <a target="_blank" href="https://www.fabtextil.com/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
+            <a target="_blank" href="https://brunovassari.com/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
     </div>
         </div>
         </article>
@@ -120,21 +136,6 @@
             <article>
                 <div class="carrusel aparicionFadeUp">
             <div class="interiorCarrusel">
-                <img src="images/Bruno_Vassari.webp" alt="web Bruno Vassari en WordPress">
-            </div>
-        </div>
-            <div class="textoPortfolio aparicionTextoPortfolio">
-            <h4>Web Bruno Vassari</h4>
-            <h5 class="destacado"> Desarrollo web | WordPress | Diseño gráfico | SEO </h5>
-            <p>Trabajando en la agencia Imago realicé diseño y desarrollo de la pagina web corporativa para la empresa Bruno Vassari. Desarrollada con WordPress, se usó plugin de woocommerce en modo catalogo para mostrar productos y se realizó la optimización de su SEO.</p>
-            <div class="botones">
-                <a target="_blank" href="https://brunovassari.com/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
-        </div>
-            </div>
-            </article>
-            <article>
-                <div class="carrusel aparicionFadeUp">
-            <div class="interiorCarrusel">
                 <img src="images/AEIC.webp" alt="web AEIC">
             </div>
         </div>
@@ -144,6 +145,20 @@
             <p>Trabajando en la agencia Imago realicé el desarrollo de la pagina web corporativa para la Asociación Española de Ingredientes Cosméticos (AEIC). Desarrollada utilizando WordPress y optimizando su SEO.</p>
             <div class="botones">
                 <a target="_blank" href="https://aeic.eu/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
+        </div>
+            </div>
+            </article>
+            <article>
+                <div class="carrusel aparicionFadeUp">
+            <div class="interiorCarrusel">
+                <img src="images/institut-medic-DrNieto.webp" alt="web Institut Mèdic Estètic Dr. Nieto">
+            </div>
+        </div>
+            <div class="textoPortfolio aparicionTextoPortfolio">
+            <h4>Web Institut Mèdic Estètic Dr. Nieto</h4>
+            <h5 class="destacado"> Desarrollo web | WordPress | Diseño gráfico | SEO </h5>
+            <p>Trabajando en la agencia Imago realicé diseño y desarrollo de la pagina web corporativa para Institut Mèdic Estètic Dr. Nieto. Diseñada, desarrollada con WordPress, optimización de su SEO y realización de actualizaciones hasta 2023.</p>
+            <div class="botones">
         </div>
             </div>
             </article>
@@ -174,6 +189,21 @@
             <h5 class="destacado"> Desarrollo web | WordPress | SEO </h5>
             <p>Trabajando en la agencia Imago realicé el desarrollo de la pagina web para el evento KID'S INNOVATION FEST del año 2022 que se realizó en Lloret de Mar. Desarrollada utilizando WordPress y optimizando su SEO.</p>
             <div class="botones">
+        </div>
+            </div>
+            </article>
+            <article>
+                <div class="carrusel aparicionFadeUp">
+            <div class="interiorCarrusel">
+                <img src="images/SoundMoovz.webp" alt="web SoundMoovz">
+            </div>
+        </div>
+            <div class="textoPortfolio aparicionTextoPortfolio">
+            <h4>Web SoundMoovz</h4>
+            <h5 class="destacado"> Desarrollo web | WordPress | SEO </h5>
+            <p>Trabajando en la agencia Imago realicé el desarrollo de la web de producto Soundmoovz. Desarrollada utilizando WordPress y optimizando su SEO.</p>
+            <div class="botones">
+                <a target="_blank" href="https://www.soundmoovz.es/" class="boton"><p>Ver sitio</p><div class="iconoLink iconosportfolio"></div></a>
         </div>
             </div>
             </article>
