--- a/index.html
+++ b/index.html
@@ -291,6 +291,18 @@
         </div>
     </div>
     </div>
+    <div id="aficiones">
+        <div id="linkDesplegable" class="flex elementos-aparicion">
+            <p>Si quieres conocerme un poco más despliega para ver mis aficiones </p>
+            <div class="iconoUp iconos rotado"></div>
+        </div>
+        <div id="desplegable" class="ocultar">
+            <div class="listaAficiones animate-fade">
+                <p class="aparicionFadeUp">Juegos de mesa</p><p class="aparicionFadeUp">Videojuegos</p><p class="aparicionFadeUp">Escape Rooms</p><p class="aparicionFadeUp">Wargames</p><p class="aparicionFadeUp">Puzzles</p><p class="aparicionFadeUp">Rompecabezas</p><p class="aparicionFadeUp">Cine</p><p class="aparicionFadeUp">Series</p><p class="aparicionFadeUp">Literatura de fantasía</p><p class="aparicionFadeUp">Ciencia Ficción</p><p class="aparicionFadeUp">Terror</p><p class="aparicionFadeUp">True Crime</p><p class="aparicionFadeUp">Deportes</p><p class="aparicionFadeUp">Gimnasio</p><p class="aparicionFadeUp"><span class="tachado">Fútbol</span> Depor</p><p class="aparicionFadeUp">Billar</p><p class="aparicionFadeUp">Pádel... y la cervecita de despúes</p>
+        </div>
+        </div>
+
+    </div>
     </section>
     <section id="contacto">
         <div class="titular animacionFade"><h2>Contacto</h2></div>
@@ -316,7 +328,7 @@
     <footer>
         <p>© 2024 Alberto Basanta.</p>
         <div class="flex"><p>Ya has llegado al final, </p>
-        <div class="flex">
+        <div class="flex volver">
             <a href="#"><p><span class="bold">vuelve al inicio</span></p></a>
             <a href="#"><div class="iconoUp iconos"></div></a>
         </div>
