--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <div id="aficiones">
         <div id="linkDesplegable" class="flex elementos-aparicion">
             <p>Si quieres conocerme un poco más despliega para ver mis aficiones </p>
-            <div class="iconoUp iconos rotado"></div>
+            <div id="iconoDesplegable" class="iconoUp iconos rotado"></div>
         </div>
         <div id="desplegable" class="ocultar">
             <div class="listaAficiones animate-fade">
