--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
 <div class="flexcentrado animacionFade">
     <div class="marco"><a target="_blank" href="mailto:basantades@gmail.com"><h5 class="fraseFinal">¿Tienes un proyecto en mente?<br> ¡Estoy a <span class="clic">solo un clic</span> de distancia, <br>no dudes en escribirme!</h5></a></div>
 </div>
+</div>
 <div id="formulario">
     <form action="https://api.web3forms.com/submit" method="POST">
 
@@ -337,10 +338,9 @@
         <!-- hCaptcha Spam Protection -->
         <div class="h-captcha" data-captcha="true"></div>
     
-        <button type="submit">Submit Form</button>
+        <button type="submit">Enviar</button>
     
     </form>
-</div>
 </div>
     </section>
     <footer>
