--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <h5 class="destacado">Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h5>
                 <p>Profesional del <strong>diseño gráfico</strong>, iniciado en trabajos de impresión y editorial y evolucionado a <strong>diseño online y web</strong>. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
                 <p>Después de crear bastantes webs en <strong>WordPress</strong> me estoy centrando más en el <strong>desarrollo web</strong> y ampliando más mis conocimientos en <strong>HTML, CSS, UI/UX, JavaScript y PHP</strong>.</p>
-                <p>Un ejemplo es esta web, la cual he desarrollado utilizando <strong>CSS</strong>  y <strong> JavaScript puro</strong>.</p>
+                <p>Un ejemplo es esta web, la cual he desarrollado utilizando <strong>CSS</strong>  y <strong> JavaScript puro</strong>. Puedes ver la presentacíon de proyecto en <a href="https://drive.google.com/file/d/1F20Uk5kR9rLVoVZmWwduj-jaT1XOhEfh/view?usp=sharing" target="_blank"><strong>este link</strong></a></p>
                 <div class="botones">
                     <a target="_blank" href="https://drive.google.com/file/d/19h_76yJXkYsbDNo9laZYt0wX1qgJQ57j/view?usp=sharing" class="boton img-aparicion"><p>CV completo</p><div class="iconoPdf iconosportfolio"></div></a>
                 </div>
